[gd_scene load_steps=4 format=3 uid="uid://450adnkyaqqx"]

[ext_resource type="Script" path="res://Menu/settings.gd" id="1_cks2g"]
[ext_resource type="LabelSettings" uid="uid://dh5lhont4m6sa" path="res://Themes & fonts/Label22.tres" id="2_m5scx"]
[ext_resource type="FontVariation" uid="uid://bi6br6mf63upq" path="res://Themes & fonts/NightWatchB_Label.tres" id="3_rysh4"]

[node name="SettingsLayer" type="CanvasLayer"]

[node name="Settings" type="Control" parent="."]
custom_minimum_size = Vector2(504, 486)
layout_mode = 3
anchor_left = 0.325
anchor_top = 0.2
anchor_right = 0.675
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cks2g")

[node name="TextureRect" type="ColorRect" parent="Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.165656, 0.165656, 0.165656, 1)

[node name="MarginContainer" type="MarginContainer" parent="Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 60

[node name="VBoxContainer" type="GridContainer" parent="Settings/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 40
theme_override_constants/v_separation = 40
columns = 2

[node name="Label" type="Label" parent="Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volume"
label_settings = ExtResource("2_m5scx")

[node name="HSlider" type="HSlider" parent="Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 20.0
value = 10.0
tick_count = 20

[node name="Label4" type="Label" parent="Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Music"
label_settings = ExtResource("2_m5scx")

[node name="OptionButton" type="OptionButton" parent="Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_rysh4")
theme_override_font_sizes/font_size = 22
item_count = 1
selected = 0
popup/item_0/text = "Main theme"
popup/item_0/id = 0

[node name="Label2" type="Label" parent="Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Mute"
label_settings = ExtResource("2_m5scx")

[node name="Mute" type="CheckBox" parent="Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label3" type="Label" parent="Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Fullscreen"
label_settings = ExtResource("2_m5scx")

[node name="Fullscreen" type="CheckBox" parent="Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="GoToMenu" type="Button" parent="Settings/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("3_rysh4")
theme_override_font_sizes/font_size = 28
text = "Go to main menu"

[node name="Leave" type="Button" parent="Settings"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_top = 10.0
offset_right = -10.0
grow_horizontal = 0
text = "X"

[connection signal="value_changed" from="Settings/MarginContainer/VBoxContainer/HSlider" to="Settings" method="_on_h_slider_value_changed"]
[connection signal="item_selected" from="Settings/MarginContainer/VBoxContainer/OptionButton" to="Settings" method="_on_option_button_item_selected"]
[connection signal="toggled" from="Settings/MarginContainer/VBoxContainer/Mute" to="Settings" method="_on_mute_toggled"]
[connection signal="toggled" from="Settings/MarginContainer/VBoxContainer/Fullscreen" to="Settings" method="_on_fullscreen_toggled"]
[connection signal="pressed" from="Settings/MarginContainer/GoToMenu" to="Settings" method="_on_go_to_menu_pressed"]
[connection signal="pressed" from="Settings/Leave" to="Settings" method="_on_leave_pressed"]
